--- a/template05/css/style16.css
+++ b/template05/css/style16.css
@@ -68,7 +68,7 @@ ul{
     color: red;
 }
 /* ... */
-input{
+#input1{
     background-color: #f6f6f6;
     width: 100%;
     padding: 7px 20px;
@@ -138,9 +138,10 @@ textarea{
     margin-top: 120px;
 }
 
-.payment{
+.payment1{
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 40px;
+    margin-top: 25px;
 }
 .title-payment{
     text-align: center;
@@ -166,7 +167,9 @@ textarea{
 .check2{
     padding: 20px;
 }
-.payment button{
+
+
+.payment1 button{
     background-color: #fe3e57;
     color: #fff;
     width: 100%;
@@ -175,8 +178,7 @@ textarea{
 }
 
 
-
-/* foot */
+/* footer */
 footer {
     background-color: #f6f6f6;
 }
@@ -229,4 +231,10 @@ footer {
 }
 .payment a{
     padding-left: 10px;
+}
+
+@media(max-width: 991px) {
+    #con9{
+        width: 100%;
+    }
 }
